[gd_scene load_steps=4 format=2]

[ext_resource path="res://Blocks/PortBlockBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://BlockSystems/IOPorts/IOPort.tscn" type="PackedScene" id=2]
[ext_resource path="res://Blocks/PortBlockTester.gd" type="Script" id=3]

[node name="PortBlockTester" instance=ExtResource( 1 )]
script = ExtResource( 3 )
class_type = "PortBlockTester"

[node name="Sprite" parent="." index="0"]
visible = false

[node name="IOPortIN" parent="BlockSystems/PortManager" index="0" instance=ExtResource( 2 )]
position = Vector2( 0, -17.0938 )
port_id = "test_in"
is_input = true

[node name="IOPortOUT" parent="BlockSystems/PortManager" index="1" instance=ExtResource( 2 )]
position = Vector2( 0, 15.1532 )
port_id = "test_out"
is_output = true

[node name="VBoxContainer" type="VBoxContainer" parent="." index="4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.5
margin_top = 29.0
margin_right = 42.5
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer" index="0"]
margin_right = 85.0
margin_bottom = 14.0
text = "adfafdsasfasd"

[node name="HSlider" type="HSlider" parent="VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 85.0
margin_bottom = 34.0

[node name="Inlabel" type="Label" parent="." index="5"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = -49.0
margin_right = 20.0
margin_bottom = -35.0
